# Elastos.CarrierClassic.Bootstrap

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  THANKS.md
cmake/: CarrierDefaults.cmake  CarrierPackages.cmake
config/: bootstrapd.conf  turnserver.conf
debian/: control  postinst  postrm  prerm
docker/: Dockerfile
scripts/: ela-bootstrapd.service  ela-bootstrapd.sh
src/: CMakeLists.txt
src/bootstrapd/: .gitignore  Makefile  bootstrapd.c  setproctitle.h  version.h.in
src/c-toxcore/: .gitignore
src/c-toxcore/other/bootstrap_daemon/src/: Makefile.inc  base58.h  config.c  config.h  global.h  tox-bootstrapd.c
src/c-toxcore/toxcore/: DHT.c  LAN_discovery.c  Makefile.inc  TCP_client.c  TCP_server.c  net_crypto.c  network.c  network.h  onion.c  onion_announce.c  onion_client.c  ping.c
src/coturn/: .gitignore  Makefile.in  VERSION
src/coturn/src/apps/relay/: mainrelay.c  userdb.c
src/datastore/: dhtnode.cpp
